crates/compiler/src/ir/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_basic_struct.ts_function_FunctionDeclarationID(54).snap
---
source: crates/compiler/src/ir/mod.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_23
block_23 -> [block_36, ]
block_36 -> [block_41, ]
