crates/compiler/src/ir/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_f64.ts_function_FunctionDeclarationID(53).snap
---
source: crates/compiler/src/ir/mod.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_34
block_34 -> [block_44, ]
block_44 -> [block_45, ]
