crates/compiler/src/ir/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_i16.ts_function_FunctionDeclarationID(59).snap
---
source: crates/compiler/src/ir/mod.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_32
block_32 -> [block_42, ]
block_42 -> [block_43, ]
block_43 -> [block_45, ]
block_45 -> [block_46, ]
