crates/compiler/src/ir/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_i32.ts_function_FunctionDeclarationID(53).snap
---
source: crates/compiler/src/ir/mod.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_32
block_32 -> [block_42, ]
block_42 -> [block_43, ]
