crates/compiler/src/ir/snapshots/fusion__ir__test__test_well_formed_control_flow_graph_test_i32.ts_function_FunctionDeclarationID(55).snap
---
source: crates/compiler/src/ir/mod.rs
expression: "format!(\"{}\", control_flow_graph)"
---
entry point: block_31
block_31 -> [block_41, ]
block_41 -> [block_42, ]
block_42 -> [block_44, ]
block_44 -> [block_45, ]
